# Receiver/app.py
@@ -6,7 +6,7 @@ import logging.config
 import yaml
 import uuid
 import json
-import KafkaClient from pykafka
+from pykafka import KafkaClient
 import datetime
 from connexion import NoContent
 import requests
@@ -22,11 +22,7 @@ def postAuction(body):
     trace = str(uuid.uuid4())
     body["traceId"] = trace
     logging.info("Received event postAuction request with a trace id of " + trace)
-    # x = requests.post(app_config['AUCTION_URL']['url'], headers={
-    # 'Content-Type' : "application/json"}, data=json.dumps(body)
-    # )
-
-    client = KafkaClient(hosts='<kafka-server>:<kafka-port>')
+    client = KafkaClient(hosts=f'${app_config["events"]["hostname"]}:${app_config["events"]["port"]}')
     topic = client.topics[str.encode(app_config["events"]["topic"])]
     producer = topic.get_sync_producer()
     msg = { "type": "postAuction",
@@ -37,23 +33,16 @@ def postAuction(body):
     msg_str = json.dumps(msg)
     producer.produce(msg_str.encode('utf-8'))
     # logger.info('Returned postAuction event response(Id: ' + trace + ') with status ' + str(x.status_code))
-    logger.info('Returned postAuction event response(Id: ' + trace + ') with status 201 i hope'
-
-    return "response", 201
+    logger.info('Returned postAuction event response(Id: ' + trace + ') with status 201 i hope')
 
 def bidAuction(body):
     trace = str(uuid.uuid4())
     body["traceId"] = trace
     logging.info("Received event bidAuction request with a trace id of " + trace)
-    # x = requests.post(app_config['BID_URL']['url'], headers={
-    # 'Content-Type' : "application/json"}, data=json.dumps(body)
-    # )
-    # logger.info('Returned bidAuction event response(Id: ' + trace + ') with status ' + str(x.status_code))
-    # return x.text, x.status_code
-    client = KafkaClient(hosts='<kafka-server>:<kafka-port>')
+    client = KafkaClient(hosts=f'${app_config["events"]["hostname"]}:${app_config["events"]["port"]}')
     topic = client.topics[str.encode(app_config["events"]["topic"])]
     producer = topic.get_sync_producer()
-    msg = { "type": "postAuction",
+    msg = { "type": "bidAuction",
             "datetime" :
                 datetime.datetime.now().strftime(
                     "%Y-%m-%dT%H:%M:%S"),
@@ -61,7 +50,7 @@ def bidAuction(body):
     msg_str = json.dumps(msg)
     producer.produce(msg_str.encode('utf-8'))
     # logger.info('Returned postAuction event response(Id: ' + trace + ') with status ' + str(x.status_code))
-    logger.info('Returned bidAuction event response(Id: ' + trace + ') with status 201 i hope'
+    logger.info('Returned bidAuction event response(Id: ' + trace + ') with status 201 i hope')
 
     return "response", 201
 
